--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,23 @@
 # SITE CONFIGURATION
-title: Sleek # your site title
-author: GitHub User # You :P
+title: Howtomation # your site title
+author: Nguyễn Chung # You :P
 description: > # Meta description of Homepage
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: # the subpath of your site, e.g. /blog
 url: "https://howtomate.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 
 # SEO PLUGIN
 social:
   name: Your Name
   links:
-    - https://twitter.com/BenBalter
-    - https://www.facebook.com/ben.balter
-    - https://www.linkedin.com/in/BenBalter
-    - https://plus.google.com/+BenBalter
-    - https://github.com/benbalter
-    - https://keybase.io/benbalter
+    - https://twitter.com
+    - https://www.facebook.com/nguyenchungict
+    - https://www.linkedin.com/
+    - https://plus.google.com/
+    - https://github.com/howtomate
+    - https://keybase.io/
 
 # THEME SETTINGS
 navigation: # Navigation links
